--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="Professional Portfolio Website theme" />
+    <meta name="keywords" keywords="Web developer, Portfolio, Programming" />
     <link rel="stylesheet" href="./css/style.css" />
     <link rel="stylesheet" href="./css/tab-responsive/tab.css" />
     <link rel="stylesheet" href="./css/mobile-responsive/mobile.css" />
@@ -54,10 +55,11 @@
       <h2 class="nav_title">Portfolio</h2>
       <ul class="nav_links">
         <li><a href="#">Home</a></li>
-        <li><a href="#">About</a></li>
-        <li><a href="#">Works</a></li>
-        <li><a href="#">Plans</a></li>
-        <li><a href="#">Contact</a></li>
+        <li><a href="#About">About</a></li>
+        <li><a href="#recent_works">Works</a></li>
+        <li><a href="#Skills">Skills</a></li>
+        <li><a href="#reviews">Reviews</a></li>
+        <li><a href="#Contact">Contact</a></li>
       </ul>
       <!-- bars will be visible in mobile type devices only and it will toggle our nav onClicking on it -->
       <div class="bars">
